assets/css/stylesheet.css
/* ... */
  /* Wave divider */
  body
{

  overflow-y: hidden;
  margin:0;
  padding:0;
  background-color:rgb(25, 20, 45, 0.9);
}

.editorial {
    display: block;
    width: 100%;
    height: 65px;
    max-height: 6%;
    margin-top: 60px;
    /* position: absolute; Set position to absolute or relative based on your requirement */
    left: 0px;
    bottom: 0px; /* Uncomment this if you want the SVG to stick to the bottom */
    z-index: 1;
  }

.parallax1 > use {
  animation: move-forever1 10s linear infinite;
  &:nth-child(1) {
    animation-delay: -2s;
  }
  col
}
.parallax2 > use {
  animation: move-forever2 8s linear infinite;
  &:nth-child(1) {
    animation-delay: -2s;
  }
}
.parallax3 > use {
  animation: move-forever3 6s linear infinite;
  &:nth-child(1) {
    animation-delay: -2s;
  }
}
.parallax4 > use {
  animation: move-forever4 4s linear infinite;
  &:nth-child(1) {
    animation-delay: -2s;
  }
}
@keyframes move-forever1 {
  0% {
    transform: translate(85px, 0%);
  }
  100% {
    transform: translate(-90px, 0%);
  }
}
@keyframes move-forever2 {
  0% {
    transform: translate(-90px, 0%);
  }
  100% {
    transform: translate(85px, 0%);
  }
}
@keyframes move-forever3 {
  0% {
    transform: translate(85px, 0%);
  }
  100% {
    transform: translate(-90px, 0%);
  }
}
@keyframes move-forever4 {
  0% {
    transform: translate(-90px, 0%);
  }
  100% {
    transform: translate(85px, 0%);
  }
}


.main-logo{
    padding: 0.2em;    
    filter: drop-shadow(0px -20px 6px rgba(0, 0, 0, 0.885)); 
    transition: all 0.2s ease-in-out;
    z-index: 0;
}


#typedtext{
    padding: 0.2em;    filter: drop-shadow(0px -10px 3px rgb(0, 0, 0)); 
    transition: all 0.2s ease-in-out;
}




/* before adding the photo to the div with the "card-photo" class, in the css clear the styles for .card-photo and remove .card-photo::before and .card-photo::after, then set the desired styles for .card- photo. */

#team {
    width: 70%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-bottom: 15vh;
}

#cards {
    /* width: 70%; */
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 30px; 
}


.card {
    --font-color: #fefefe;
    --font-color-sub: #7e7e7e;
    --bg-color: rgb(40, 44, 81);
    --main-color: #fefefe;
    width: 215px;
    height: 324px;
    background: var(--bg-color);
    border: 2px solid var(--main-color);
    border-radius: 5px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    transition: 0.5s;
    --shadow-color: hsla(280, 100%, 55%, 0.944);
    filter: drop-shadow(
      1px 2px 8px var(--shadow-color)
    );
  }
  @media (max-width: 720px) {
    .card {
      width: 400px;
      height: 300px;
    }
  }

  .card:hover {
    --shadow-color: hsla(280, 91%, 64%, 0.944);
    filter: drop-shadow(
      1px 2px 12px var(--shadow-color)
    );
  }
  
  .card-photo {
  /* clear and add new css */
    transform: scale(0.3) translate(220px, 230px);
    width: 400px;
    position: absolute;
    height: 400px;
    margin-left: -128px;
    margin-top: -250px;
    /* background: radial-gradient(circle,rgba(0,0,0,0.15) 50%,rgba(0,0,0,0) 50.8%) 14% 30%/11% 11%,radial-gradient(circle,#ffdab9 50%,rgba(255,218,185,0) 50.8%) 10% 30%/16% 16%,radial-gradient(circle,#8b4513 50%,rgba(139,69,19,0) 50.8%) 7.5% 29%/20% 20%,radial-gradient(circle,rgba(0,0,0,0.15) 50%,rgba(0,0,0,0) 50.8%) 86% 30%/11% 11%,radial-gradient(circle,#ffdab9 50%,rgba(255,218,185,0) 50.8%) 90% 30%/16% 16%,radial-gradient(circle,#8b4513 50%,rgba(139,69,19,0) 50.8%) 92.5% 29%/20% 20%,radial-gradient(circle at 50% 0,#ffdab9 29.5%,#8b4513 30%,#8b4513 35%,rgba(139,69,19,0) 35.5%) 50% 95%/40% 20%,radial-gradient(ellipse at 50% 100%,rgba(139,69,19,0) 49%,#8b4513 49.5%,#8b4513 52%,rgba(139,69,19,0) 52.5%) 50% 110%/120% 40%,radial-gradient(circle at 50% 0,rgba(255,255,255,0) 35%,white 35%,white 45%,rgba(255,255,255,0) 45.5%) 50% 89%/40% 13%,linear-gradient(#8b4513,#8b4513) 37% 100%/.25em 22%,linear-gradient(#8b4513,#8b4513) 63% 100%/.25em 22%,linear-gradient(80deg,rgba(0,0,0,0) 50%,#333 50.5%) 24% 100%/1em 18%,linear-gradient(-80deg,rgba(0,0,0,0) 50%,#333 50.5%) 76% 100%/1em 18%,linear-gradient(162deg,rgba(0,0,0,0) 10%,#333 10%) 30% 100%/1.5em 21%,linear-gradient(-162deg,rgba(0,0,0,0) 10%,#333 10%) 70% 100%/1.5em 21%,radial-gradient(ellipse at 100% 100%,#556b2f 50%,rgba(85,107,47,0) 50.5%) 0 100%/37% 29%,radial-gradient(ellipse at 0 100%,#556b2f 50%,rgba(85,107,47,0) 50.5%) 100% 100%/37% 29%,radial-gradient(ellipse at 50% 100%,#222 51%,rgba(0,0,0,0) 51.5%) 50% 110%/120% 40%,radial-gradient(circle at 50% 0,rgba(0,0,0,0.15) 40%,rgba(0,0,0,0) 40.5%) 50% 82%/20% 20%,linear-gradient(to right,#8b4513 4px,rgba(139,69,19,0) 4px) 50% 80%/20% 20%,linear-gradient(to left,#8b4513 4px,rgba(139,69,19,0) 4px) 50% 80%/20% 20%,linear-gradient(#ffdab9,#ffdab9) 50% 80%/20% 20%,linear-gradient(#48240a,#48240a) 50% 100%/65% 60%,radial-gradient(circle,white 30%,rgba(255,255,255,0) 62%) 50% 50%/100% 100%; */
    background-color: #ccc;
    background-repeat: no-repeat;
    border-radius: 30%;
    filter: drop-shadow(0px 0px 30px rgba(0, 0, 0, 0.693));
    transition: transform 0.3s ease-out;
  }
  
  .card-title {
    text-align: center;
    color: var(--font-color);
    margin-top: 17vh;
    font-size: 20px;
    font-weight: 400;
    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
  }
  
  .card-title span {
    font-size: 15px;
    color: var(--font-color-sub);
  }
  
  .card-socials {
    display: flex;
    height: 0;
    opacity: 0;
    margin-top: 10px;
    gap: 20px;
    transition: 0.5s;
  }
  
  .card-socials-btn {
    margin-top: 1.5vh;
    width: 30px;
    height: 30px;
    border: none;
    background: transparent;
    cursor: pointer;
  }
/* ... */

